# rdbt

./: .gitignore  Cargo.toml  README.md
scripts/: install.sh
src/: args.rs  main.rs  onboarding.rs  safety.rs  tui.rs
src/database/: client.rs  mod.rs  strategy.rs
src/tui/: command.rs  keymap.rs  menu.rs  style.rs  theme.rs
