[package]
name = "rdbt"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "A Ratatui database terminal for MySQL and PostgreSQL"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.30.1"
sqlx = { version = "0.8", default-features = false, features = [
    "any",
    "mysql",
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
